apps/website/services/website/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: devteds/demo-bookstore-website:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
