apps/website/services/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: website
  ports:
  - port: 80
